Final version biocoll

--- a/2024/02-biocoll/references.bib
+++ b/2024/02-biocoll/references.bib
@@ -28,6 +28,20 @@
   keywords = {archived,Calendar Time,Counting Process,Diabetic Nephropathy,Event History Analysis,Event History Model}
 }
 
+@article{benavoli2017timechange,
+  title = {Time for a {{Change}}: A {{Tutorial}} for {{Comparing Multiple Classifiers Through Bayesian Analysis}}},
+  shorttitle = {Time for a {{Change}}},
+  author = {Benavoli, Alessio and Corani, Giorgio and Demšar, Janez and Zaffalon, Marco},
+  date = {2017},
+  journaltitle = {Journal of Machine Learning Research},
+  volume = {18},
+  number = {77},
+  pages = {1--36},
+  issn = {1533-7928},
+  url = {http://jmlr.org/papers/v18/16-305.html},
+  urldate = {2024-02-28}
+}
+
 @article{benavolitimechange,
   title = {Time for a {{Change}}: A {{Tutorial}} for {{Comparing Multiple Classiﬁers Through Bayesian Analysis}}},
   author = {Benavoli, Alessio and Corani, Giorgio and Demˇsar, Janez and Zaffalon, Marco},
@@ -73,6 +87,20 @@
   keywords = {archived}
 }
 
+@article{eugster2012domainbasedbenchmarka,
+  title = {Domain-{{Based Benchmark Experiments}}: {{Exploratory}} and {{Inferential Analysis}}},
+  shorttitle = {Domain-{{Based Benchmark Experiments}}},
+  author = {Eugster, Manuel J. A. and Hothorn, Torsten and Leisch, Friedrich},
+  date = {2012},
+  journaltitle = {Austrian Journal of Statistics},
+  volume = {41},
+  number = {1},
+  pages = {5--26},
+  issn = {1026-597X},
+  doi = {10.17713/ajs.v41i1.185},
+  langid = {english}
+}
+
 @article{graf1995investigationmeasures,
   title = {An {{Investigation}} on {{Measures}} of {{Explained Variation}} in {{Survival Analysis}}},
   author = {Graf, Erika and Schumacher, Martin},
@@ -86,6 +114,20 @@
   publisher = {{[Royal Statistical Society, Wiley]}},
   issn = {0039-0526},
   doi = {10.2307/2348898}
+}
+
+@article{kvamme2023brierscore,
+  title = {The {{Brier Score}} under {{Administrative Censoring}}: {{Problems}} and a {{Solution}}},
+  shorttitle = {The {{Brier Score}} under {{Administrative Censoring}}},
+  author = {Kvamme, Håvard and Borgan, Ørnulf},
+  date = {2023},
+  journaltitle = {Journal of Machine Learning Research},
+  volume = {24},
+  number = {2},
+  pages = {1--26},
+  issn = {1533-7928},
+  url = {http://jmlr.org/papers/v24/19-1030.html},
+  urldate = {2024-02-28}
 }
 
 @article{pohar2006relativesurvival,
@@ -133,6 +175,22 @@
   doi = {10.1186/1471-2288-13-102},
   pmcid = {PMC3750352; https://web.archive.org/web/20220113104816/https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3750352/},
   keywords = {archived}
+}
+
+@article{wiegrebe2024deeplearning,
+  title = {Deep Learning for Survival Analysis: A Review},
+  shorttitle = {Deep Learning for Survival Analysis},
+  author = {Wiegrebe, Simon and Kopper, Philipp and Sonabend, Raphael and Bischl, Bernd and Bender, Andreas},
+  date = {2024-02-19},
+  journaltitle = {Artificial Intelligence Review},
+  shortjournal = {Artif Intell Rev},
+  volume = {57},
+  number = {3},
+  pages = {65},
+  issn = {1573-7462},
+  doi = {10.1007/s10462-023-10681-3},
+  langid = {english},
+  keywords = {Deep learning,Review,Survival analysis,Time-to-event analysis}
 }
 
 @online{wissel2022survboardstandardised,
