--- a/2024/02-biocoll/01MAR24_Lukas_Burk.qmd
+++ b/2024/02-biocoll/01MAR24_Lukas_Burk.qmd
@@ -175,11 +175,11 @@ data.table::rbindlist(lapply(seq_along(task_summary), \(i) {
 
 ::: {.incremental}
 
-- **Baseline**: Kaplan-Meier & Nelson-Aalen
+- **Baseline**: Kaplan-Meier & Nelson-Aalen, Akritas
 - **Classical**: Cox, penalized (L1,L2), parametric (AFT)
 - **Trees**: Individuals and ensembles
 - **Boosting**: Gradient- and likelihood-based
-- **Other**: Akritas, SVM
+- **Other**: SVM
 
 :::
 
@@ -190,12 +190,12 @@ tibble::tribble(
   ~Abbreviation, ~Name,                 ~`Package`,
   "KM",   "Kaplan-Meier",                "survival", 
   "NA",   "Nelson-Aalen",                "survival", 
+  "AK",   "Akritas",                     "survivalmodels", 
   "CPH",  "Cox Regression",              "survival",  
   "GLM",  "Penalized Cox Regression (L1, L2)",    "glmnet",    
   "Pen",  "Penalized Cox Regression (L1, L2)",    "penalized", 
   "Par",  "Parametric (AFT)",            "survival",   
   "Flex", "Flexible Parametric Splines", "flexsurv",
-  "AK",   "Akritas",                     "survivalmodels", 
   "SSVM", "Survival SVM",                "survivalsvm"
 ) |>
   dplyr::select(Name, Abbreviation, Package) |>
@@ -203,9 +203,9 @@ tibble::tribble(
   kableExtra::kable_styling() |>
   kableExtra::column_spec(1, bold = TRUE) |>
   kableExtra::column_spec(3, monospace = TRUE) |>
-  kableExtra::row_spec(row = 2, hline_after = TRUE) |>
-  kableExtra::row_spec(row = 7, hline_after = TRUE) |>
-  kableExtra::row_spec(row = 4:5, color = "#1763AA") # RColorBrewer::brewer.pal(5, "Dark2")[[1]])
+  kableExtra::row_spec(row = 3, hline_after = TRUE) |>
+  kableExtra::row_spec(row = 8, hline_after = TRUE) |>
+  kableExtra::row_spec(row = 5:6, color = "#1763AA") # RColorBrewer::brewer.pal(5, "Dark2")[[1]])
 ```
 
 [^mlr3]: @pkgmlr3
@@ -341,7 +341,7 @@ tibble::tribble(
 ```{r get-bma}
 #| include: false
 #| cache: true
-bma = readRDS(url("https://stuff.jemu.name/survival_benchmark/results/bma_full.rds"))
+bma = readRDS("bma_full.rds")
 
 bma = bma |>
   mutate(
@@ -351,8 +351,8 @@ bma = bma |>
       c("RRT", "RFSRC", "RAN", "CIF", "ORSF") ~ "Trees",
       c("MBO", "XGBCox", "XGBAFT", "CoxB") ~ "Boosting",
       .ptype = factor(levels = c("Baseline", "Classical", "Trees", "Boosting"))
-    ),
-    learner_id = factor(learner_id, levels = c(setdiff(levels(learner_id), "AK"), "AK"))
+    )#,
+    #learner_id = factor(learner_id, levels = c(setdiff(levels(learner_id), "AK"), "AK"))
   )
 
 palette = RColorBrewer::brewer.pal(5, "Dark2")
@@ -375,6 +375,7 @@ bma |>
   dplyr::filter(!(learner_id %in% c("KM", "NA"))) |>
   ggplot(aes(x = learner_id, y = harrell_c, color = learner_group, fill = learner_group)) +
   geom_boxplot(alpha = 1/4, key_glyph = "rect") +
+  geom_hline(yintercept = 0.5, linetype = "dashed") +
   scale_x_discrete(guide = guide_axis(n.dodge = 2)) +
   scale_color_manual(values = palette, aesthetics = c("color", "fill"), guide = guide_legend(keywidth = 2)) +
   # scale_color_brewer(palette = "Dark2", aesthetics = c("color", "fill"), guide = guide_legend(keywidth = 2)) +
