--- a/2024/02-biocoll/references.bib
+++ b/2024/02-biocoll/references.bib
@@ -6,7 +6,7 @@
   volume = {22},
   number = {3},
   pages = {1299--1327},
-  publisher = {{Institute of Mathematical Statistics}},
+  publisher = {Institute of Mathematical Statistics},
   issn = {0090-5364, 2168-8966},
   doi = {10.1214/aos/1176325630},
   keywords = {62G05,62G30,62H12,62J05,Beran optimality,Conditional empirical processes,conditional Kaplan-Meier estimator,polynomial regression,weak convergence}
@@ -20,8 +20,8 @@
   date = {1993},
   series = {Springer {{Series}} in {{Statistics}}},
   pages = {1--44},
-  publisher = {{Springer US}},
-  location = {{New York, NY}},
+  publisher = {Springer US},
+  location = {New York, NY},
   doi = {10.1007/978-1-4612-4348-9_1; https://web.archive.org/web/20220113095506/https://link.springer.com/chapter/10.1007%2F978-1-4612-4348-9_1},
   isbn = {978-1-4612-4348-9},
   langid = {english},
@@ -79,8 +79,8 @@
   title = {The {{Frailty Model}}},
   author = {Duchateau, Luc and Janssen, Paul},
   date = {2008},
-  publisher = {{Springer New York}},
-  location = {{New York, NY}},
+  publisher = {Springer New York},
+  location = {New York, NY},
   doi = {10.1007/978-0-387-72835-3; https://web.archive.org/web/20220113103921/https://link.springer.com/book/10.1007%2F978-0-387-72835-3},
   isbn = {978-0-387-72834-6},
   langid = {english},
@@ -111,7 +111,7 @@
   eprint = {2348898},
   eprinttype = {jstor},
   pages = {497--507},
-  publisher = {{[Royal Statistical Society, Wiley]}},
+  publisher = {[Royal Statistical Society, Wiley]},
   issn = {0039-0526},
   doi = {10.2307/2348898}
 }
@@ -154,8 +154,8 @@
   editorbtype = {redactor},
   date = {2000},
   series = {Statistics for {{Biology}} and {{Health}}},
-  publisher = {{Springer New York}},
-  location = {{New York, NY}},
+  publisher = {Springer New York},
+  location = {New York, NY},
   doi = {10.1007/978-1-4757-3294-8},
   isbn = {978-1-4419-3161-0 978-1-4757-3294-8}
 }
